# py_midi2song

./: README.md  api_tryout.py  app.py  py_midi2song.py  py_midi2song_aurora.py  pyproject.toml
.github/workflows/: python-publish.yml
src/midi2song/: __init__.py  __main__.py  aurora_runway.py  cli.py
src/py_midi2song/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
